vlib/v/checker/tests/struct_unneeded_default.vv
struct Test {
	n int = 0
	s string = ''
}

fn main() {
}
